--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,4 @@ telegram:
     hbj:
       name: ${BOT_NAME}
       token: ${BOT_TOKEN}
-      image-path: /home/viktorvx/Загрузки/hbj/images/
+      media-path: /home/viktorvx/Загрузки/hbj/
